# azure

./: .gitignore  Makefile  README.md  TODO.md  extract.py  pyproject.toml  spec.yaml
ghidra/: mark_azure_shiftjis_strings.py
include/: gte.inc  macro.inc
splat/: main.bin.yaml  slus_006.14.yaml  slus_006.14_symbol_addrs.txt  slus_006.14_undefined_funcs_auto.txt  slus_006.14_undefined_syms_auto.txt  town.bin.yaml
splat/ext/: az_string.py  shiftjis.py
src/azure/: __about__.py  __init__.py  main.py  psylib.py
src/azure/commands/: bincue.py  convert_shiftjis.py  create_string_yaml.py  extract.py  extract_symbol_info.py  find_shiftjis_strings.py  findstr.py  lib.py  process_bincue.py  process_symbol_addrs.py  shiftjis.py  symbols.py
tools/: addr_to_yaml.py  convert_shiftjis.py  extract_symbol_info.py  find_shiftjis_strings.py  lib2ar.sh  make-img.py  parse-vab.py  process_symbol_addrs.py  psylib.py
tools/bincue/: LICENSE.txt  README.md  pyproject.toml
tools/bincue/src/bincue/: main.py
tools/bincue/tests/: __init__.py
tools/yapsylib/: README.md  pyproject.toml
tools/yapsylib/src/yapsylib/: __about__.py  main.py
