[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azure"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Forest Belton", email = "65484+forestbelton@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "PyYAML>=6.0.2,<7.0.0",
  "splat64[mips]>=0.32.2,<1.0.0",
]

[project.urls]
Documentation = "https://github.com/forestbelton/azure#readme"
Issues = "https://github.com/forestbelton/azure/issues"
Source = "https://github.com/forestbelton/azure"

[tool.hatch.version]
path = "src/azure/__about__.py"

[tool.hatch.build]
packages = [
  "src/azure",
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/azure}"
