[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yapsylib"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Forest Belton", email = "65484+forestbelton@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Forest Belton/yapsylib#readme"
Issues = "https://github.com/Forest Belton/yapsylib/issues"
Source = "https://github.com/Forest Belton/yapsylib"

[tool.hatch.version]
path = "src/yapsylib/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/yapsylib tests}"

[tool.coverage.run]
source_pkgs = ["yapsylib", "tests"]
branch = true
parallel = true
omit = [
  "src/yapsylib/__about__.py",
]

[tool.coverage.paths]
yapsylib = ["src/yapsylib", "*/yapsylib/src/yapsylib"]
tests = ["tests", "*/yapsylib/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
